Avoid battle of the z-indexes
SRFCMS-7201

--- a/source/_patterns/20-molecules/ticker/ticker.scss
+++ b/source/_patterns/20-molecules/ticker/ticker.scss
@@ -178,8 +178,6 @@
   font: 22px/28px $font-medium;
   letter-spacing: .3px;
   margin: 32px 0 12px;
-  position: relative;
-  z-index: 2; //place title on top of .ticker__info
   @include smartphone {
     margin-top: 24px;
   }
@@ -194,7 +192,7 @@
   border-bottom: 5px solid #fff;
   box-shadow: 0 0 10px 10px #fff; // like gradient
   position: relative;
-  z-index: 1;
+  z-index: -1;
 }
 
 .ticker__info--live {
